upd: develop actions

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -72,6 +72,13 @@ jobs:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
+    strategy:
+      deploy:
+        host: ${{ secrets.DEPLOY_TEST_HOST }}
+        port: ${{ secrets.DEPLOY_TEST_PORT }}
+        user: ${{ secrets.DEPLOY_TEST_USER }}
+        key: ${{ secrets.DEPLOY_TEST_KEY }}
+        path: ${{ secrets.DEPLOY_TEST_PATH }}
     steps:
       - name: Download project
         uses: actions/download-artifact@v2
@@ -83,9 +90,9 @@ jobs:
         uses: burnett01/rsync-deployments@4.1
         with:
           switches: ${{ secrets.DEPLOY_TEST_SWITCHES }}
-          path: ${{ secrets.DEPLOY_TEST_PATH }}
-          remote_path: ${{ secrets.PROJECT_BUILD_NAME }}
-          remote_host: ${{ secrets.DEPLOY_TEST_HOST }}
-          remote_port: ${{ secrets.DEPLOY_TEST_PORT }}
-          remote_user: ${{ secrets.DEPLOY_TEST_USER }}
-          remote_key: ${{ secrets.DEPLOY_TEST_KEY }}
+          path: ${{ deploy.path }}
+          remote_path: ${{ deploy.path }}/${{ secrets.PROJECT_BUILD_NAME }}
+          remote_host: ${{ deploy.host }}
+          remote_port: ${{ deploy.port }}
+          remote_user: ${{ deploy.user }}
+          remote_key: ${{ deploy.key }}
