--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -77,6 +77,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: ${{ secrets.PROJECT_BUILD_NAME }}
+          path: ${{ secrets.PROJECT_BUILD_NAME }}
       - name: ls
         run: ls
       - name: Deploying to server
