--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
+    "intl-tel-input": "^17.0.11",
     "jquery": "^3.5.0",
     "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
